# fred-mAIyer

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: init.md
.github/workflows/: ci.yml
src/fred_maiyer/: __init__.py  auth.py  cart.py  cli.py  google_tasks.py  models.py  products.py  store.py
tests/: conftest.py  test_auth.py  test_cart.py  test_cli.py  test_google_tasks.py  test_products.py  test_store.py
